--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "Pechativse",
+	"name": "Start",
 	"dependencies": {
 		"grunt": "~0.4.5",
 		"load-grunt-tasks": "~1.0",
@@ -13,6 +13,9 @@
 		"grunt-contrib-clean": "~0.6",
 		"grunt-contrib-copy": "~0.7",
 		"grunt-contrib-watch": "~0.6",
-		"grunt-contrib-uglify": "~0.6"
+		"grunt-contrib-uglify": "~0.6",
+		"grunt-contrib-jade": "~0.14",
+		"grunt-replace": "~0.8",
+		"grunt-prettify": "~0.4"
 	}
 }
